[gd_scene load_steps=12 format=3 uid="uid://b6m3k67iskqld"]

[ext_resource type="Script" path="res://levels/level2d_top_down.gd" id="1_7ed80"]
[ext_resource type="TileSet" uid="uid://buk5iukosth8u" path="res://levels/level.tres" id="2_a44fo"]
[ext_resource type="PackedScene" uid="uid://dvwjhmlwnvfnh" path="res://knight.tscn" id="3_7meu7"]
[ext_resource type="PackedScene" uid="uid://ba80fb1marvp5" path="res://sword.tscn" id="4_5pgds"]
[ext_resource type="PackedScene" uid="uid://dbworsv6nlwo6" path="res://key.tscn" id="5_wlt1r"]
[ext_resource type="PackedScene" uid="uid://b0vi0lobnppa3" path="res://door.tscn" id="6_njuia"]
[ext_resource type="PackedScene" uid="uid://cadus25wp11qo" path="res://enemies/slime.tscn" id="7_hlvya"]
[ext_resource type="PackedScene" uid="uid://c0clhp666klv2" path="res://cursor.tscn" id="8_v33te"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcdvi"]
size = Vector2(61.5, 20)

[sub_resource type="Curve2D" id="Curve2D_go5ro"]
_data = {
"points": PackedVector2Array(-4, 65, 4, -65, 1045, 323, -23, 42, 23, -42, 1130, 244, 14, 37, -14, -37, 1136, 139, 46, 22, -46, -22, 1066, 93, 25, -16, -25, 16, 939, 88, -14, -59, 14, 59, 923, 161, -6, -48, 6, 48, 909, 246, 23, -44, -23, 44, 955, 419, -48, -36, 48, 36, 909, 510, 0, 0, 0, 0, 1030, 531, 0, 0, 0, 0, 1119, 535, -1, 51, 1, -51, 1170, 480, 39, 35, -39, -35, 1113, 414, 18, 78, -18, -78, 1045, 323)
}
point_count = 14

[sub_resource type="Curve2D" id="Curve2D_h1uhj"]
_data = {
"points": PackedVector2Array(66, -27, -66, 27, 1366, 95, -54, 4, 54, -4, 1374, 524, -5, 209, 5, -209, 1474, 306, 81, -17, -81, 17, 1366, 95)
}
point_count = 4

[node name="level2dtopdown" type="Node2D"]
script = ExtResource("1_7ed80")
next_scene = "level2d_side"

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = ExtResource("2_a44fo")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 393216, 4, 2, 524288, 4, 3, 393216, 4, 4, 458752, 4, 6, 393216, 4, 7, 458752, 4, 8, 524288, 4, 65544, 196608, 1, 65543, 196608, 1, 65542, 196608, 1, 65541, 196608, 1, 65540, 196608, 1, 65539, 196608, 1, 65538, 196608, 1, 65537, 196608, 1, 65536, 393216, 4, 131072, 393216, 4, 196608, 393216, 4, 262144, 393216, 4, 327680, 393216, 4, 393216, 393216, 4, 458752, 393216, 4, 458753, 196608, 1, 458754, 196608, 1, 196616, 196608, 1, 262152, 196608, 1, 393224, 196608, 1, 131080, 196608, 1, 131079, 196608, 1, 196615, 196608, 1, 262151, 196608, 1, 393223, 196608, 1, 393222, 196608, 1, 327686, 196608, 1, 262150, 196608, 1, 196614, 196608, 1, 131078, 196608, 1, 131077, 196608, 1, 196613, 196608, 1, 262149, 196608, 1, 327684, 196608, 1, 393220, 196608, 1, 262148, 196608, 1, 196612, 196608, 1, 131076, 196608, 1, 393219, 196608, 1, 327683, 196608, 1, 262147, 196608, 1, 196611, 196608, 1, 131075, 196608, 1, 131074, 196608, 1, 196610, 196608, 1, 262146, 196608, 1, 327681, 196608, 1, 393217, 196608, 1, 262145, 196608, 1, 131073, 196608, 1, 196609, 196608, 1, 393218, 196608, 1, 327682, 196608, 1, 327685, 196608, 1, 393221, 196608, 1, 1, 393216, 4, 327688, 196608, 1, 327687, 196608, 1, 5, 327680, 2, 524289, 196608, 1, 589825, 196608, 1, 655361, 196608, 1, 720897, 196608, 1, 524290, 196608, 1, 589826, 196608, 1, 655362, 196608, 1, 720898, 196608, 1, 458755, 196608, 1, 524291, 196608, 1, 589827, 196608, 1, 655363, 196608, 1, 720899, 196608, 1, 458756, 196608, 1, 524292, 196608, 1, 589828, 196608, 1, 655364, 196608, 1, 720900, 196608, 1, 458757, 196608, 1, 524293, 196608, 1, 589829, 196608, 1, 655365, 196608, 1, 720901, 196608, 1, 458758, 196608, 1, 524294, 196608, 1, 589830, 196608, 1, 655366, 196608, 1, 720902, 196608, 1, 458759, 196608, 1, 524295, 196608, 1, 589831, 196608, 1, 655367, 196608, 1, 720903, 196608, 1, 458760, 196608, 1, 524296, 196608, 1, 589832, 196608, 1, 655368, 196608, 1, 720904, 196608, 1, 65545, 196608, 1, 131081, 196608, 1, 196617, 196608, 1, 262153, 196608, 1, 327689, 196608, 1, 393225, 196608, 1, 458761, 196608, 1, 524297, 196608, 1, 589833, 196608, 1, 655369, 196608, 1, 720905, 196608, 1, 65546, 196608, 1, 131082, 196608, 1, 196618, 196608, 1, 262154, 196608, 1, 327690, 196608, 1, 393226, 196608, 1, 458762, 196608, 1, 524298, 196608, 1, 589834, 196608, 1, 655370, 196608, 1, 720906, 196608, 1, 65547, 196608, 1, 131083, 196608, 1, 196619, 196608, 1, 262155, 196608, 1, 327691, 196608, 1, 393227, 196608, 1, 458763, 196608, 1, 524299, 196608, 1, 589835, 196608, 1, 655371, 196608, 1, 720907, 196608, 1, 65548, 196608, 1, 131084, 196608, 1, 196620, 196608, 1, 262156, 196608, 1, 327692, 196608, 1, 393228, 196608, 1, 458764, 196608, 1, 524300, 196608, 1, 589836, 196608, 1, 655372, 196608, 1, 720908, 196608, 1, 65549, 196608, 1, 131085, 196608, 1, 196621, 196608, 1, 262157, 196608, 1, 327693, 196608, 1, 393229, 196608, 1, 458765, 196608, 1, 524301, 196608, 1, 589837, 196608, 1, 655373, 196608, 1, 720909, 196608, 1, 65550, 196608, 1, 131086, 196608, 1, 196622, 196608, 1, 262158, 196608, 1, 327694, 196608, 1, 393230, 196608, 1, 458766, 196608, 1, 524302, 196608, 1, 589838, 196608, 1, 655374, 196608, 1, 720910, 196608, 1, 65551, 196608, 1, 131087, 196608, 1, 196623, 196608, 1, 262159, 196608, 1, 327695, 196608, 1, 393231, 196608, 1, 458767, 196608, 1, 524303, 196608, 1, 589839, 196608, 1, 655375, 196608, 1, 720911, 196608, 1, 65552, 196608, 1, 131088, 196608, 1, 196624, 196608, 1, 262160, 196608, 1, 327696, 196608, 1, 393232, 196608, 1, 458768, 196608, 1, 524304, 196608, 1, 589840, 196608, 1, 655376, 196608, 1, 720912, 196608, 1, 65553, 196608, 1, 131089, 196608, 1, 196625, 196608, 1, 262161, 196608, 1, 327697, 196608, 1, 393233, 196608, 1, 458769, 196608, 1, 524305, 196608, 1, 589841, 196608, 1, 655377, 196608, 1, 720913, 196608, 1, 65554, 196608, 1, 131090, 196608, 1, 196626, 196608, 1, 262162, 196608, 1, 327698, 196608, 1, 393234, 196608, 1, 458770, 196608, 1, 524306, 196608, 1, 589842, 196608, 1, 655378, 196608, 1, 720914, 196608, 1, 65555, 196608, 1, 131091, 196608, 1, 196627, 196608, 1, 262163, 196608, 1, 327699, 196608, 1, 393235, 196608, 1, 458771, 196608, 1, 524307, 196608, 1, 589843, 196608, 1, 655379, 196608, 1, 720915, 196608, 1, 65556, 196608, 1, 131092, 196608, 1, 196628, 196608, 1, 262164, 196608, 1, 327700, 196608, 1, 393236, 196608, 1, 458772, 196608, 1, 524308, 196608, 1, 589844, 196608, 1, 655380, 196608, 1, 720916, 196608, 1, 65557, 196608, 1, 131093, 196608, 1, 196629, 196608, 1, 262165, 196608, 1, 327701, 196608, 1, 393237, 196608, 1, 458773, 196608, 1, 524309, 196608, 1, 589845, 196608, 1, 655381, 196608, 1, 720917, 196608, 1, 65558, 196608, 1, 131094, 196608, 1, 196630, 196608, 1, 262166, 196608, 1, 327702, 196608, 1, 393238, 196608, 1, 458774, 196608, 1, 524310, 196608, 1, 589846, 196608, 1, 655382, 196608, 1, 720918, 196608, 1, 65559, 196608, 1, 131095, 196608, 1, 196631, 196608, 1, 262167, 196608, 1, 327703, 196608, 1, 393239, 196608, 1, 458775, 196608, 1, 524311, 196608, 1, 589847, 196608, 1, 655383, 196608, 1, 720919, 196608, 1, 65560, 196608, 1, 131096, 196608, 1, 196632, 196608, 1, 262168, 196608, 1, 327704, 196608, 1, 393240, 196608, 1, 458776, 196608, 1, 524312, 196608, 1, 589848, 196608, 1, 655384, 196608, 1, 720920, 196608, 1, 65561, 196608, 1, 131097, 196608, 1, 196633, 196608, 1, 262169, 196608, 1, 327705, 196608, 1, 393241, 196608, 1, 458777, 196608, 1, 524313, 196608, 1, 589849, 196608, 1, 655385, 196608, 1, 720921, 196608, 1, 65562, 196608, 1, 131098, 196608, 1, 196634, 196608, 1, 262170, 196608, 1, 327706, 196608, 1, 393242, 196608, 1, 458778, 196608, 1, 524314, 196608, 1, 589850, 196608, 1, 655386, 196608, 1, 720922, 196608, 1, 65563, 196608, 1, 131099, 196608, 1, 196635, 196608, 1, 262171, 196608, 1, 327707, 196608, 1, 393243, 196608, 1, 458779, 196608, 1, 524315, 196608, 1, 589851, 196608, 1, 655387, 196608, 1, 720923, 196608, 1, 65564, 196608, 1, 131100, 196608, 1, 196636, 196608, 1, 262172, 196608, 1, 327708, 196608, 1, 393244, 196608, 1, 458780, 196608, 1, 524316, 196608, 1, 589852, 196608, 1, 655388, 196608, 1, 720924, 196608, 1, 65565, 196608, 1, 131101, 196608, 1, 196637, 196608, 1, 262173, 196608, 1, 327709, 196608, 1, 393245, 196608, 1, 458781, 196608, 1, 524317, 196608, 1, 589853, 196608, 1, 655389, 196608, 1, 720925, 196608, 1, 65566, 196608, 1, 131102, 196608, 1, 196638, 196608, 1, 262174, 196608, 1, 327710, 196608, 1, 393246, 196608, 1, 458782, 196608, 1, 524318, 196608, 1, 589854, 196608, 1, 655390, 196608, 1, 720926, 196608, 1, 65567, 196608, 1, 131103, 196608, 1, 196639, 196608, 1, 262175, 196608, 1, 327711, 196608, 1, 393247, 196608, 1, 458783, 196608, 1, 524319, 196608, 1, 589855, 196608, 1, 655391, 196608, 1, 720927, 196608, 1, 65568, 196608, 1, 131104, 196608, 1, 196640, 196608, 1, 262176, 196608, 1, 327712, 196608, 1, 393248, 196608, 1, 458784, 196608, 1, 524320, 196608, 1, 589856, 196608, 1, 655392, 196608, 1, 720928, 196608, 1, 524288, 458752, 4, 589824, 458752, 4, 655360, 458752, 4, 720896, 458752, 4, 786432, 458752, 4, 786433, 458752, 4, 786434, 458752, 4, 786435, 458752, 4, 786436, 458752, 4, 786437, 458752, 4, 786438, 458752, 4, 786439, 458752, 4, 786440, 458752, 4, 786441, 458752, 4, 786442, 458752, 4, 786443, 458752, 4, 786444, 458752, 4, 786445, 458752, 4, 786446, 458752, 4, 786447, 458752, 4, 786448, 458752, 4, 786449, 458752, 4, 786450, 458752, 4, 786451, 458752, 4, 786452, 458752, 4, 786453, 458752, 4, 786454, 458752, 4, 786455, 458752, 4, 786456, 458752, 4, 786457, 458752, 4, 786458, 458752, 4, 786459, 458752, 4, 786460, 458752, 4, 786461, 458752, 4, 786462, 458752, 4, 786463, 458752, 4, 786464, 458752, 4, 786465, 458752, 4, 10, 458752, 4, 11, 458752, 4, 12, 458752, 4, 13, 458752, 4, 14, 458752, 4, 15, 458752, 4, 16, 458752, 4, 17, 458752, 4, 18, 458752, 4, 19, 458752, 4, 20, 458752, 4, 21, 458752, 4, 22, 458752, 4, 23, 458752, 4, 24, 458752, 4, 25, 458752, 4, 26, 458752, 4, 27, 458752, 4, 28, 458752, 4, 29, 458752, 4, 30, 458752, 4, 31, 458752, 4, 32, 458752, 4, 9, 458752, 4, 33, 458752, 4, 65569, 458752, 4, 131105, 458752, 4, 196641, 458752, 4, 262177, 458752, 4, 327713, 458752, 4, 393249, 458752, 4, 458785, 458752, 4, 524321, 458752, 4, 589857, 458752, 4, 655393, 458752, 4, 720929, 458752, 4)
layer_1/name = "items"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(131075, 327680, 1, 327683, 0, 1, 327684, 65536, 1, 1, 262144, 1)

[node name="knight" parent="." node_paths=PackedStringArray("cursor") instance=ExtResource("3_7meu7")]
position = Vector2(399, 302)
scale = Vector2(2, 2)
cursor = NodePath("../cursor")
weapon = ExtResource("4_5pgds")

[node name="Key" parent="." instance=ExtResource("5_wlt1r")]
position = Vector2(387, 129)
scale = Vector2(3, 3)

[node name="Door" parent="." instance=ExtResource("6_njuia")]
position = Vector2(267, 20)
scale = Vector2(2, 2)

[node name="scene_change" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_change"]
position = Vector2(269, 19)
shape = SubResource("RectangleShape2D_kcdvi")
disabled = true

[node name="slime2" parent="." node_paths=PackedStringArray("patrol_path") instance=ExtResource("7_hlvya")]
position = Vector2(1350, 437)
scale = Vector2(5, 5)
speed = 15.0
patrol_path = NodePath("../Path2D2/PathFollow2D")

[node name="slime" parent="." node_paths=PackedStringArray("patrol_path") instance=ExtResource("7_hlvya")]
position = Vector2(1026, 202)
scale = Vector2(4, 4)
speed = 20.0
patrol_path = NodePath("../Path2D/PathFollow2D")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-16, 0)
curve = SubResource("Curve2D_go5ro")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1045, 323)
rotation = -1.50934

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_h1uhj")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2(1366, 95)
rotation = 2.75327

[node name="cursor" parent="." instance=ExtResource("8_v33te")]

[connection signal="opened" from="Door" to="." method="_on_door_opened"]
[connection signal="body_entered" from="scene_change" to="." method="_on_scene_change_body_entered"]
